@@ -1,0 +1,15 @@
+#ifndef PROF_PROFESSOR_H
+#define PROF_PROFESSOR_H
+
+#include "Professor/Ipol.h"
+#include "Professor/ParamPoints.h"
+#include <string>
+
+namespace Professor {
+
+  /// Version code for this build of Professor
+  std::string version();
+
+}
+
+#endif
