@@ -1,3 +1,11 @@
+2015-12-03  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Provide a version() function in the C++ library, and map it into
+	Python. Both sources use the VERSION variable defined in the
+	Makefile at build time.
+
+	* Reduce SVD fitting threshold to 1e-20.
+
 2015-11-28  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Version 2.1.2
